# market-mapper

./: AGENTS.md  README.md  pyproject.toml  scope.md
.market_mapper/state/runs/: run_3cf61ec5614d44628e1c1ecd926ede60.json
.market_mapper/state/sessions/: session_56cd0f6065364205b9b54d51cd9dba2d.json
docs/: implementation-plan.md
frontend/: README.md  app.js  index.html  styles.css
frontend/src/app/: README.md
frontend/src/components/: README.md
frontend/src/lib/: README.md  api.js  auth.js  sessionStream.js
frontend/src/styles/: README.md
src/market_mapper/: __init__.py  auth.py  worker.py
src/market_mapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/market_mapper/agents/: __init__.py  chart_generation.py  company_discovery.py  comparison.py  critic_verifier.py  dashboard_builder.py  executor.py  planner.py  report_generation.py  session_chatbot.py  structured_extraction.py  web_research.py
src/market_mapper/api/: __init__.py  app.py
src/market_mapper/charts/: __init__.py  service.py
tests/: README.md
tests/unit/: test_chart_generation.py  test_chart_runtime.py  test_company_discovery.py  test_comparison_agent.py  test_critic_verifier.py  test_executor_node.py  test_report_generation.py  test_report_generation_node.py  test_report_runtime.py  test_research_planner.py  test_sandbox_service.py  test_session_chatbot.py  test_session_state_service.py  test_structured_extraction.py  test_web_research_runtime.py  test_workflow_routing.py  test_workflow_service.py  test_workflow_state_store.py
(+58 files in other folders)
