[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-mapper"
version = "0.1.0"
description = "Planner-executor market research system scaffold"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "jinja2>=3.1,<4",
    "langgraph>=0.2,<0.4",
    "openai>=1.0,<3",
    "pandas>=2.0,<3",
    "playwright>=1.40,<2",
    "pydantic>=2,<3",
    "trafilatura>=1.9,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
